feat(player): 学习，从抄开始

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ flutter:
     - assets/audio/Leo.mp3
     - assets/audio/Seven.mp3
     - assets/audio/Ultraman.mp3
+    - assets/images/detail_bg.jpeg
+    - assets/images/play_needle.png
+    - assets/txt/lyric.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
