--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
     - assets/images/cover.jpg
     - assets/images/disc.png
     - assets/images/play.png
+    - assets/json/lyric.json
     - assets/txt/lyric.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
