--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   audioplayers: "^0.15.1"
-  provider: ^4.3.1
+  provider: "^4.3.1"
   shared_preferences: "^0.5.8"
   flutter_spinkit: "^4.1.2"
 
